[package]
name = "tokio-multi-lock"
version = "0.1.0-1"
edition = "2024"
description = "Deadlock-safe concurrent lock acquisition"
readme = "README.md"
repository = "https://github.com/prokopschield/tokio-multi-lock"
license = "LGPL-3.0-or-later"
keywords = ["async", "concurrency", "deadlock", "mutex", "tokio"]
categories = ["asynchronous", "concurrency"]

[dependencies]
paste = "1"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
