[package]
name = "tokio-multilock"
version = "0.1.0-4"
edition = "2024"
description = "Deadlock-safe concurrent lock acquisition"
readme = "README.md"
repository = "https://github.com/prokopschield/tokio-multilock"
license = "LGPL-3.0-or-later"
keywords = ["async", "concurrency", "deadlock", "mutex", "tokio"]
categories = ["asynchronous", "concurrency"]

[dependencies]
paste = "1"
tokio = { version = "1", default-features = false, features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt",
  "sync",
  "time"
] }

[lints.clippy]
cargo = { level = "warn", priority = -1 }
doc_markdown = "warn"
expect_used = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
nursery = { level = "warn", priority = -1 }
panic = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[lints.rust]
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
